# gcp-fastapi-template

./: .dockerignore  .env.dist  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yaml  logging.conf  main.py  pyproject.toml
.circleci/: config.yml
alembic/: env.py
alembic/versions/: 01c3256835c8_initial_structure.py
app/api/: deps.py
app/api/api_v1/endpoints/: login.py
app/core/: config.py  init_db.py  messages.py  security.py  session.py  tasks_manager.py
app/models/: user.py
app/schemas/: common.py  token.py
app/utils/: format.py
docker/: Dockerfile
scripts/: backend_pre_start.py  init.sh  initial_data.py  restore_alembic_versions.py
scripts/deployment/: core.sh
tests/: conftest.py
tests/core/: __init__.py
tests/factories/: __init__.py
